config/operator/operator_deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hive-operator
  labels:
    control-plane: hive-operator
    controller-tools.k8s.io: "1.0"
    hive.openshift.io/component: hive-operator
spec:
  selector:
    matchLabels:
      control-plane: hive-operator
      controller-tools.k8s.io: "1.0"
  replicas: 1
  revisionHistoryLimit: 4
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        control-plane: hive-operator
        controller-tools.k8s.io: "1.0"
        hive.openshift.io/component: hive-operator
    spec:
      serviceAccountName: hive-operator
      volumes:
      - name: kubectl-cache
        emptyDir: {}
      - name: tmp
        emptyDir: {}
      containers:
      # By default we will use the latest CI images published from hive master:
      - image: registry.ci.openshift.org/openshift/hive-v4.0:hive
        imagePullPolicy: Always
        name: hive-operator
        ports:
        - name: metrics
          containerPort: 2112
          protocol: TCP
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
        command:
          - /opt/services/hive-operator
          - --log-level
          - info
        volumeMounts:
        - name: kubectl-cache
          mountPath: /var/cache/kubectl
        - name: tmp
          mountPath: /tmp
        securityContext:
          privileged: false
          readOnlyRootFilesystem: true
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8080
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
      terminationGracePeriodSeconds: 10
