config/operator/operator.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hive-controller-manager-service
  namespace: openshift-hive
  labels:
    control-plane: controller-manager
    controller-tools.k8s.io: "1.0"
spec:
  selector:
    control-plane: controller-manager
    controller-tools.k8s.io: "1.0"
  ports:
  - port: 443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hive-operator
  namespace: openshift-hive
  labels:
    control-plane: hive-operator
    controller-tools.k8s.io: "1.0"
spec:
  selector:
    matchLabels:
      control-plane: hive-operator
      controller-tools.k8s.io: "1.0"
  replicas: 1
  revisionHistoryLimit: 4
  template:
    metadata:
      labels:
        control-plane: hive-operator
        controller-tools.k8s.io: "1.0"
    spec:
      containers:
      # By default we will use the latest CI images published from hive master:
      - image: registry.svc.ci.openshift.org/openshift/hive-v4.0:hive
        imagePullPolicy: Always
        name: hive-operator
        resources:
          limits:
            cpu: 100m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 75Mi
        command:
          - /opt/services/hive-operator
          - --log-level
          - debug
      terminationGracePeriodSeconds: 10
